chore: rebrand bnpi-pms-api to bnpi-pats-api
